# badger2040-rust

./: Cargo.toml  memory.x
src/: flash.rs  lib.rs  main.rs
src/logic/: dice.rs
