[package]
name = "badger2040-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
fugit = "0.3.6"
nb = "1.1.0"
panic-halt = "0.2.0"
pimoroni_badger2040 = "0.4.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { version = "0.8.0"}
uc8151 = "0.1.4"
embedded-graphics-core = { version = "0.3.3", optional = true }
embedded-graphics = "0.7.1"
critical-section = "1.1.1"
rp2040-pac = "0.4.0"
tickv = "1.0.0"
numtoa = "0.2.4"
siphasher = "0.3.10"
rp2040-panic-usb-boot = "0.5.0"

